[arief] - fix responsivity on mobile view

--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -473,12 +473,6 @@ footer #wave {
   height: 100%;
 }
 
-.topup-image {
-  max-width: 180px;
-  height: auto;
-  object-fit: cover;
-}
-
 .numbering-text {
   font-size: 20px;
   font-weight: 200;
@@ -513,6 +507,7 @@ footer #wave {
   background-color: #d2d2d2;
   padding-top: 20px;
   padding-bottom: 20px;
+  overflow-x: hidden;
 }
 
 #marquee-content {
@@ -571,19 +566,47 @@ footer #wave {
     justify-content: center;
   }
 
+  .offering-image {
+    width: 304px;
+    display: flex;
+    margin: auto;
+  }
+
   .btn-playstore {
     max-width: 164px;
+  }
+
+  .topup-image {
+    max-width: 120px;
+    height: auto;
+    object-fit: cover;
   }
 }
 
 @media only screen and (min-width: 768px) {
   .hero-img {
     width: 600px;
+    right: 50%;
+    left: 50%;
+  }
+
+  .offering-image {
+    width: 520px;
   }
 
   .btn-playstore {
     max-width: 204px;
     max-height: auto;
     object-fit: cover;
+  }
+
+  .topup-image {
+    max-width: 200px;
+    height: auto;
+    object-fit: cover;
+  }
+
+  .carousel-img {
+    margin-top: -5px;
   }
 }
